# work-dashboard

./: .env.prod.example  .gitignore  .mcp.json  CLAUDE.md  Caddyfile  Dockerfile  README.md  docker-compose.yml
.claude/: settings.json
.claude/agents/: eval-worker.md  verifier.md
.claude/commands/: eval.md  verify.md
.claude/hooks/: format.sh
.claude/rules/: backend.md  frontend.md  router.md  tasks-panel.md  (+1 more)
backend/: docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 7173ec284d38_create_task_overlay.py  b8e1cf4a6209_add_task_groups.py  c4d5e6f70812_add_scratchpad_and_review_queue.py  d1a2b3c4e5f6_goal8_multitenancy.py  e2f3a4b5c6d7_goal9_notes_hierarchy.py
backend/app/: db.py  errors.py  main.py
backend/app/auth/: deps.py  models.py  router.py  service.py
backend/app/google/: _paging.py  auth.py  bootstrap.py  calendar.py  docs.py  tasks.py
backend/app/overlay/: models.py  service.py
backend/app/router/: classifier.py  config.py  models.py  scheduler.py  schema.py  service.py
backend/app/router/evals/: cases.jsonl  runner.py
backend/app/routers/: calendar.py  scratch.py  tasks.py
backend/app/settings/: notes_index.py  router.py  service.py
backend/app/writes/: __init__.py  service.py
backend/scripts/: backup.py
backend/tests/: conftest.py  test_auth.py  test_calendar.py  test_notes_hierarchy.py  test_notes_index.py  test_overlay.py  test_router.py  test_settings.py  test_writes.py
docs/: api-reference.md  deploy.md  project-context.md
frontend/: index.html  package-lock.json  package.json
(+49 files in other folders)
